# deep_learning_cpp

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: utils.cmake
include/: functors_as_ordinary_functions.hpp  has_specify_member.hpp
src/: CMakeLists.txt
src/concurrency/: promise.cpp
src/metaprogramming/: functors_as_ordinary_functions.cpp  has_specify_member.cpp
template-list/: CMakeLists.txt
tests/: CMakeLists.txt  functors_as_ordinary_functions_test.cpp  has_specify_member_test.cpp  test_concurrency.cpp  test_functors_as_ordinary_functions.cpp  test_has_specify_member.cpp
